--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <main>
     <section class="banner">
-      <img src="C:\Users\joyvi\Downloads\banner.jpg" alt="Craft Banner"/>
+      <img src="banner.jpg" alt="Craft Banner"/>
     </section>
 
     <section class="welcome">
@@ -26,7 +26,7 @@
 
     <section class="gallery">
       <div class="gallery-item">
-        <img src="C:\Users\joyvi\Downloads\images.jpeg" alt="Paper Flower Art"/>
+        <img src="images.jpeg" alt="Paper Flower Art"/>
         <div class="caption">Paper Flower Art</div>
       </div>
       <div class="gallery-item">
@@ -34,18 +34,18 @@
         <div class="caption">Handmade Cards</div>
       </div>
       <div class="gallery-item">
-        <img src="C:\Users\joyvi\Downloads\BOTTLE.jpeg" alt="Recycled Bottle Crafts"/>
+        <img src="BOTTLE.jpeg" alt="Recycled Bottle Crafts"/>
         <div class="caption">Recycled Bottle Crafts</div>
       </div>
     </section>
 
     <section class="content-section">
       <div class="content">
-        <img src="C:\Users\joyvi\Downloads\DIY Wall Decor.jpg" alt="DIY Wall Decor"/>
+        <img src="DIY Wall Decor.jpg" alt="DIY Wall Decor"/>
         <p>Create stunning wall décor using recycled materials like magazines. It's eco-friendly and perfect for any room!</p>
       </div>
       <div class="content reverse">
-        <img src="C:\Users\joyvi\Downloads\Mason Jar Organizers.jpeg" alt="Mason Jar Organizers"/>
+        <img src="Mason Jar Organizers.jpeg" alt="Mason Jar Organizers"/>
         <p>Turn old mason jars into colorful desk organizers. Paint them, label them, and keep your supplies stylishly sorted!</p>
       </div>
     </section>
@@ -56,3 +56,4 @@
   </footer>
 </body>
 </html>
+
