--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="caption">Paper Flower Art</div>
       </div>
       <div class="gallery-item">
-        <img src="C:\Users\joyvi\Downloads\handcards.jpeg" alt="Handmade Cards"/>
+        <img src="handcards.jpeg" alt="Handmade Cards"/>
         <div class="caption">Handmade Cards</div>
       </div>
       <div class="gallery-item">
@@ -56,4 +56,5 @@
   </footer>
 </body>
 </html>
+
 
